--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.16",
+    "@vueuse/core": "^14.0.0",
     "pinia": "^3.0.3",
     "tailwindcss": "^4.1.16",
     "uuid": "^13.0.0",
